--- a/ejemplo_html.html
+++ b/ejemplo_html.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aprendiendo HTML</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
   <!-- Agrega todos tus ejercicios después de esta línea y antes de la etiqueta de cierre </body> -->
@@ -22,18 +23,18 @@
 
   <!-- Ejercicio - Uniendo tags y párrafos -->
   <!-- Título -->
-  <h2>String</h2>
+  <h2 class="def">String</h2>
   <!-- Definición -->
   <p>Es un tipo de dato que almacena <strong>caracteres <br> de texto</strong>. Deben estar encerrados entre comillas.</p>
-  <h2>Array</h2>
+  <h2 class="def">Array</h2>
   <p>Es un conjunto de datos (incluso otros <br><em> arrays</em>) que se almacena de forma ordenada. <br>Se define entre corchetes.</p>
-  <h2>Symbol</h2>
+  <h2 class="def">Symbol</h2>
   <p>Es una etiqueta que representa <strong><em> nombres o <br>cadenas</em></strong>, que referencia a un ID interno, <br>y que permanece constante en toda la ejecución <br>del programa.</p>
 
   <img src="http://3.bp.blogspot.com/-951usKCgDf8/VqHCHOdSdXI/AAAAAAAA08Y/0phQEkCXc2g/s640/Perro-computadora.jpg" border="0">
 
   <!-- Ejercicio - Uniendo listas -->
-  <h2>Tipo de Datos</h2>
+  <h2 id="tipo_datos">Tipo de Datos</h2>
   <ol>
   	<li><a href= "https://ruby-doc.org/core-2.2.0/String.html"> String </a></li>
   	<ul>
@@ -47,7 +48,7 @@
   	</ul>
   </ol>
 
-  <h2>Datos de Empresa</h2>
+  <h2 id="datos_empresa">Datos de Empresa</h2>
   <table>
     <thead>
       <tr>
